Made it worse :)

--- a/index.html
+++ b/index.html
@@ -5,42 +5,75 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <!--Font Montserrat inladen-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <title>INDEX.HTML</title>
 </head>
 <body>
 <nav>
-    <img src="logo.png" alt="">
+    <img src="assets/images/logo/logo.svg" alt="Afbeelding">
     <ul>
-        <li><a href="#">link</a></li>
-        <li><a href="#">link</a></li>
-        <li><a href="#">link</a></li>
-        <li><a href="#">link</a></li>
-        <li><a href="#">link</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Onze diensten</a></li>
+        <li><a href="#">Onze klanten</a></li>
+        <li><a href="#">Contact</a></li>
+
     </ul>
 </nav>
 <header>
-    <h1>Razendsnelle websites!</h1>
-    <div class="buttons">
-        <a href="#" class="button btn-transparent">Over ons</a>
-        <a href="#" class="button btn-full">Maak een afspraak</a>
+    <div class="container">
+        <h1>Razendsnel geleverd!!</h1>
+        <div class="buttons">
+            <a href="#" class="button btn-transparant">Over ons</a>
+            <a href="#" class="button btn-full">Maak een afspraak</a>
+        </div>
     </div>
 </header>
 <main>
     <h2>Onze diensten</h2>
     <div class="services">
         <div class="service">
-            <h3>Websites bouwen</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h3>Goed</h3>
+            <p>Wij zijn heel goed in het maken van wat jij nodig hebt voor je bedrijf.</p>
         </div>
         <div class="service">
-            <h3>Websites bouwen</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h3>Geweldig</h3>
+            <p>Daar zijn wij geweldig snel in.</p>
         </div>
         <div class="service">
-            <h3>Websites bouwen</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h3>Beter</h3>
+            <p>Je huidige product kan altijd sneller! Neem contact met ons op.</p>
         </div>
     </div>
 </main>
+<div class="our-clients">
+    <h2>Vele gingen u voor!</h2>
+    <div class="clients">
+        <div class="client client-one">
+
+        </div>
+        <div class="client client-two">
+
+        </div>
+        <div class="client client-three">
+
+        </div>
+    </div>
+</div>
+<div class="information">
+    <h2>Wij werken met WordPress</h2>
+    <p>WordPress (WP or WordPress.org) is a free and open-source content management system (CMS) written in hypertext preprocessor (PHP) language[4] and paired with a MySQL or MariaDB database with supported HTTPS. Features include a plugin architecture and a template system, referred to within WordPress as "Themes". WordPress was originally created as a blog-publishing system but has evolved to support other web content types including more traditional mailing lists and Internet fora, media galleries, membership sites, learning management systems (LMS) and online stores. One of the most popular content management system solutions in use, WordPress is used by 42.8% of the top 10 million websites as of October 2021.[5][6]
+
+        WordPress was released on May 27, 2003, by its founders, American developer Matt Mullenweg[1] and English developer Mike Little,[7][8] as a fork of b2/cafelog. The software is released under the GPLv2 (or later) license.[9]
+
+        To function, WordPress has to be installed on a web server, either part of an Internet hosting service like WordPress.com or a computer running the software package WordPress.org in order to serve as a network host in its own right.[10] A local computer may be used for single-user testing and learning purposes.
+
+        WordPress Foundation owns WordPress, WordPress projects, and other related trademarks.[11]</p>
+    <span>Bron: <a href="https://en.wikipedia.org/wiki/WordPress">Wikipedia</a></span>
+</div>
 </body>
 </html>
