--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="#">Onze diensten</a></li>
         <li><a href="#">Onze klanten</a></li>
         <li><a href="#">Contact</a></li>
+        <li><a href="">Evan</a></li>
 
     </ul>
 </nav>
